# mathlens

./: .gitignore  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-26-persistent-repl-iterative-verification.md
src/mathlens/: lifecycle.py  models.py
src/mathlens/cli/: __init__.py  app.py  common.py  config_cmd.py  deep.py  doctor.py  explore.py  knowledge.py  tools.py
src/mathlens/config/: __init__.py  profiles.py  settings.py
src/mathlens/pipeline/: __init__.py  orchestrator.py  planner.py  response_cleaner.py  summarizer.py  validation.py  verifier.py  visualizer.py
src/mathlens/providers/: __init__.py  api.py  base.py  cli_sub.py  local.py  router.py
src/mathlens/skill/: __init__.py  mathviz.md  plugin.json
src/mathlens/ui/: __init__.py  console.py  errors.py  progress.py
src/mathlens/workspace/: __init__.py  atomic.py  store.py  (+3 more)
tests/: conftest.py
tests/fixtures/: planner_response.json  visualizer_response.py
tests/unit/: test_api_provider.py  test_cli_common.py  test_cli_config.py  test_cli_deep.py  test_cli_doctor.py  test_cli_explore.py  test_cli_knowledge.py  test_cli_provider.py  test_cli_tools.py  test_lean_repl.py  test_local_provider.py  test_models.py  test_orchestrator.py  test_planner.py  test_profiles.py  test_provider_base.py  test_provider_factory.py  test_repair.py  test_response_cleaner.py  test_router.py  test_search.py  test_settings.py  test_summarizer.py  test_ui_console.py  test_ui_errors.py  test_ui_progress.py  test_validation.py  test_verifier.py  test_verifier_iterative.py  test_visualizer.py  test_workspace.py
