[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mathlens"
version = "0.1.0"
description = "Terminal-first tool that verifies math in Lean 4 and visualizes it with Manim"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0,<3",
    "httpx>=0.27,<1",
    "tomli>=2.0; python_version < '3.12'",
    "tomli-w>=1.0,<2",
    "rich>=13.0,<14",
    "typer>=0.12,<1",
    "manim>=0.18,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=5.0,<6",
    "respx>=0.22,<1",
]

[project.scripts]
mathlens = "mathlens.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mathlens"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
